--- a/Rules/Clash/DMCA/DMCA.yaml
+++ b/Rules/Clash/DMCA/DMCA.yaml
@@ -2,3 +2,6 @@ payload:
   - DOMAIN-SUFFIX,chinadigitaltimes.net
   - DOMAIN-SUFFIX,rfa.org
   - DOMAIN-SUFFIX,pincong.rocks
+  - DOMAIN-SUFFIX,rfi.fr
+  - DOMAIN-SUFFIX,voachinese.com
+  - DOMAIN-SUFFIX,nytimes.com
