--- a/Rules/Clash/Emby/Emby.yaml
+++ b/Rules/Clash/Emby/Emby.yaml
@@ -10,4 +10,4 @@ payload:
   - DOMAIN-KEYWORD,ccemby.t
   - DOMAIN-KEYWORD,carryz.n
   - DOMAIN-KEYWORD,c.zox.s
-  - DOMAIN-KEYWORD,r.am.s
+  - DOMAIN-KEYWORD,m.ntrrr.t
