更新 CCEmby 服务器地址

--- a/Rules/Clash/Emby/Emby.yaml
+++ b/Rules/Clash/Emby/Emby.yaml
@@ -7,7 +7,7 @@ payload:
   - DOMAIN-KEYWORD,metyou.t
   - DOMAIN-KEYWORD,ornemby.c
   - DOMAIN-KEYWORD,d.prisms.c
-  - DOMAIN-KEYWORD,cemby.t
+  - DOMAIN-KEYWORD,c.coemn.c
   - DOMAIN-KEYWORD,arryz.n
   - DOMAIN-KEYWORD,c.zox.s
   - DOMAIN-KEYWORD,m.ntrrr.t
